<resources>
    <string name="prefs_name">prefs</string>
    <string name="pref_delay">delay</string>
    
 	<string-array name="pref_delay_values">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>30</item>
    </string-array>
    

    <plurals name="pref_delay_text">
        <item quantity="one">1 Minute</item>
        <item quantity="other">%d Minutes</item>
    </plurals>
    
    <string name="service">bt_service</string>

    <string name="app_name">BT Networking Matcher</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="select_device">Devices list</string>
    
    <string name="bluetooth_toggle_button_text">Bluetooth Toggle Button</string>
    <string name="bluetooth_toggle_button_message_on">Bluetooth on</string>
    <string name="bluetooth_toggle_button_message_off">Bluetooth off</string>
    <string name="event_name_hint">Event name</string>
    <string name="searching_button_text_start">Start searching</string>
    <string name="searching_button_text_stop">Stop searching</string>
    <string name="show_devices_list_button_text">Show devices list</string>
</resources>