<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ToggleButton
        android:id="@+id/bluetooth_toggle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical|center_horizontal"
        android:text="@string/bluetooth_toggle_button_text"
        android:textOff="@string/bluetooth_toggle_button_message_off"
        android:textOn="@string/bluetooth_toggle_button_message_on"
        android:onClick="onClickToggleBluetooth" >
    </ToggleButton>

    <Spinner
        android:id="@+id/frequency_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/event_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name_hint"
        android:inputType="text" />

    <Button
        android:id="@+id/searching_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searching_button_text_start" 
        android:onClick="onClickSearchingButton" />
    
    <Button
        android:id="@+id/show_devices_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_devices_list_button_text" 
        android:onClick="onClickShowDevicesListButton" />

</LinearLayout>